@@ -225,6 +225,7 @@ Frontend:
  + New teams start with a random grave and fort
  + Hedgewars creates 4 teams instead of 1 on its first launch
  + Allow to randomize hog names, hats, team name, flag, grave, voice and fort separately
+ + “Random team” button is now able to randomly select from all available hats
  * Campaign screen does no longer show AI-controlled teams
  * Campaign names and campaign mission names can now be translated
  * Creating randomized teams now randomizes (almost) every aspect
